--- a/force-app/main/default/classes/service/interface/command/cqrs_ICommandHandler.cls
+++ b/force-app/main/default/classes/service/interface/command/cqrs_ICommandHandler.cls
@@ -30,9 +30,10 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE .
  *
  * @description       : Command Handler
+ *                      Could include interfaces for CCC, Mapper, Validator, etc. - TBD                    
  * @author            : Bill Anderson
  * @group             : Interface
- * @last modified on  : 08-03-2021
+ * @last modified on  : 08-05-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
