--- a/force-app/main/default/classes/service/interface/command/cqrs_ICommandResult.cls
+++ b/force-app/main/default/classes/service/interface/command/cqrs_ICommandResult.cls
@@ -29,10 +29,11 @@
  * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE .
  *
- * @description       : Demarcation for a Command
+ * @description       : Demarcation for a Command Result. If more is needed for Command Result
+ *                      could place here ... but, violating the pattern a bit already
  * @author            : Bill Anderson
  * @group             : Interface
- * @last modified on  : 08-03-2021
+ * @last modified on  : 08-05-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
