--- a/force-app/main/default/classes/service/interface/services/cqrs_IService.cls
+++ b/force-app/main/default/classes/service/interface/services/cqrs_IService.cls
@@ -29,10 +29,10 @@
  * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE .
  *
- * @description       : Service
+ * @description       : Service (Demarcation)
  * @author            : Bill Anderson
  * @group             : Interface
- * @last modified on  : 08-03-2021
+ * @last modified on  : 08-05-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
