--- a/force-app/main/default/classes/service/services/examples/cqrs_CustomerService.cls
+++ b/force-app/main/default/classes/service/services/examples/cqrs_CustomerService.cls
@@ -31,8 +31,8 @@
  *
  * @description       : Customer Service
  * @author            : Bill Anderson
- * @group             : Service
- * @last modified on  : 08-03-2021
+ * @group             : Sample
+ * @last modified on  : 08-07-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
