--- a/force-app/main/default/classes/service/commands/examples/handlers/cqrs_AuthenticationCommandHandler.cls
+++ b/force-app/main/default/classes/service/commands/examples/handlers/cqrs_AuthenticationCommandHandler.cls
@@ -31,8 +31,8 @@
  *
  * @description       : Authentication -- contrived example
  * @author            : Bill Anderson
- * @group             : Handler
- * @last modified on  : 08-03-2021
+ * @group             : Sample
+ * @last modified on  : 08-07-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
