--- a/force-app/main/default/classes/service/interface/resolver/cqrs_IResolver.cls
+++ b/force-app/main/default/classes/service/interface/resolver/cqrs_IResolver.cls
@@ -29,11 +29,11 @@
  * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE .
  *
- * @description       : Resolver Interface 
+ * @description       : Resolver Interface
  *                      Candidate for Refactoring!
  * @author            : Bill Anderson
  * @group             : Interface
- * @last modified on  : 08-05-2021
+ * @last modified on  : 08-14-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
@@ -58,7 +58,6 @@ public interface cqrs_IResolver {
      * @return  List<cqrs_ICommand>
      */
     List<cqrs_ICommand> getCommandChain(String label);
-
     /**
      * @description get Query Chain
      * @param  label label description
@@ -66,10 +65,16 @@ public interface cqrs_IResolver {
      */
     List<cqrs_IQuery> getQueryChain(String label);
     /**
+     * @description find the Handler Name from the Command or Query Name
+     * @param  commandOrQueryName the command or Query name
+     * @return String the Handler name
+     */
+    String findCQHandlerNameByCQName(String commandOrQueryName);
+    /**
      * @description get Service by name (could extend this interface TBD)
        (best to segregate out TBD ... "cqrs_IServiceProvider")
      * @param  name service name
      * @return cqrs_IService
-     */ 
+     */
     cqrs_IService getService(String name);
 } // end of cqrs_IResolver
